clipboard paste on outlook email body doesn't work for the first time

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: javafx
    • None
    • web
    • generic
    • generic

        clipboard paste doesn't work for the first time in outlook.com
        Steps to re-produce
        1. Open "https://blu175.mail.live.com/default.aspx" from webview and login with user and password
        2. Compose a new email
        3. Copy data from non JavaFX application (i.e outside the WebView) . Either from text editor or from Webpage (using chrome or firefox).
        4. Before entering "To" and "Subject" elements, Perform clipboard Paste (Ctrl-V)

        Expected result : Clipboard data should be pasted to the email content.
        Actual result : For the first time the clipboard data is not copied. If data is pasted on "To" or "Subject" field (for the first time) and then subsequent paste operation is successful.

              Assignee:
              Guru Hb (Inactive)
              Reporter:
              Guru Hb (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: