8143894: clipboard paste on outlook email body doesn't work for the first time

Reviewed-by: arajkumar, azvegint, kcr